fix: refactor delivery configuration authorization and improve mode handling